2002-03-11  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-ucs.el (w3m-euc-japan-encoder): Treat japanese-jisx0208-1978
	as japanese-jisx0208.

	* shimbun/sb-digiko.el (shimbun-get-headers): Fixed regexp.
	* shimbun/sb-h14m.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mew.el (shimbun-get-headers): Ditto.

2002-03-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes) [w3mmee]: Fetch content-encoding from
	"x-w3m-content-encoding" filed.

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Follow
	the change of PC Watch page.

2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-1, w3m-goto-url-new-session): Remove
	unused non-global variables.

2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url, w3m-goto-url-new-session,
	w3m-select-buffer-copy-buffer): Remove unused non-global variables.

2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by Yuuichi Teranishi <teranisi@gohome.org> with mod.

	* w3m.el (w3m-no-proxy-domains): New user option renamed from
	`w3m-no-proxy-hosts' and changed the meaning.
	(w3m-additional-command-arguments): Refer to it.

2002-03-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Fix permissions.

2002-03-09  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-accept-post-header-option): Use "-help" option
	instead of "-version" option.

2002-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-command-arguments-alist): New user option.
	(w3m-no-proxy-hosts): New user option.
	(w3m-additional-command-arguments): New function.
	(w3m-w3m-retrieve): Use it.
	(w3m-history-current-url-face, w3m-copy-buffer): Remove unused
	non-global variables.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Return lowercase string
	always because `w3m-image-type-alist' has lowercase keys.

2002-03-07  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
